--- a/client/src/app/core/home/home.component.html
+++ b/client/src/app/core/home/home.component.html
@@ -1,11 +1,11 @@
 <div class="jumbotron">
   <h1 class="display-4">Bienvenidos</h1>
-  <p class="lead">Página Oficial de la Oficina Nacional de Inspección Estatal.</p>
+  <p class="lead">Sitio Web para Solicitudes de Licencia de Pesca de la Oficina Nacional de Inspección Estatal.</p>
   <hr class="my-4">
   <p>
-    La Oficina Nacional de Inspección Estatal (ONIE), Unidad Presupuestada subordinada al Ministerio 
-    de la Industria Alimentaria, se creó a partir de la fusión del Centro Nacional de Inspección de la 
-    Calidad y la Oficina Nacional de Inspección Pesquera, amparado en la Resolución Ministerial 151 de 14 
+    La Oficina Nacional de Inspección Estatal (ONIE), Unidad Presupuestada subordinada al Ministerio
+    de la Industria Alimentaria, se creó a partir de la fusión del Centro Nacional de Inspección de la
+    Calidad y la Oficina Nacional de Inspección Pesquera, amparado en la Resolución Ministerial 151 de 14
     de julio de 2015.
  </p>
   <a class="btn btn-primary btn-lg" [routerLink]="['/nosotros']" role="button">Acceda acá si desea saber más</a>
@@ -43,4 +43,3 @@
         </div>
   </div>
 </div>
-    
