--- a/client/src/app/auth/profile/profile-edit/profile-edit.component.html
+++ b/client/src/app/auth/profile/profile-edit/profile-edit.component.html
@@ -2,41 +2,134 @@
     <div class="card">
         <div class="card-header">
             <h5 class="card-title"></h5>
-            <h6 class="card-subtitle mb-2 text-muted">Editando Perfil</h6>
+            <h6 class="card-subtitle mb-2 text-muted">{{formTitle}}</h6>
         </div>
-        <form [formGroup]="editForm" (ngSubmit)="onSubmit()">
-        <div class="card-body">
-                <div class="form-group">
-                    <label for="firstName">Nombre Completo</label>
-                    <input type="text" 
-                            id="firstName" 
-                            formControlName="firstName" 
-                            class="form-control"
-                            placeholder="Nombre Completo">
-                </div>
-                <div class="form-group">
-                    <label for="lastName">Apellidos</label>
-                    <input type="text" 
-                            id="lastName" 
-                            formControlName="lastName" 
-                            class="form-control"
-                            placeholder="Apellidos">
-                </div>
-                <div class="form-group">
-                    <label for="personDir">Dirección Particular</label>
-                    <textarea type="text" 
-                            class="form-control" 
-                            formControlName="personDir" 
-                            id="personDir" 
-                            rows="6"
-                            placeholder="Dirección Particular">
-                    </textarea>
-                </div>
-        </div>
+        <form [formGroup]="editForm">
+          <div class="card-body">
+              <div class="form-group">
+                  <input type="text"
+                          id="username"
+                          formControlName="username"
+                          class="form-control"
+                          placeholder="Usuario">
+                          <small *ngIf="username.invalid && username.touched">
+                              <small class="text-danger" *ngIf="username.errors.required">{{errors.required}}<br></small>
+                              <small class="text-danger" *ngIf="username.errors.minlength">{{errors.minLength}}<br></small>
+                              <small class="text-danger" *ngIf="username.errors.usedUser">{{errors.usedUser}}<br></small>
+                          </small>
+              </div>
+              <div class="form-group">
+                  <input type="password"
+                          id="password"
+                          formControlName="password"
+                          class="form-control"
+                          placeholder="Contraseña">
+                          <small *ngIf="password.invalid && password.touched">
+                              <small class="text-danger" *ngIf="password.errors.required">{{errors.required}}<br></small>
+                              <small class="text-danger" *ngIf="password.errors.minlength">{{errors.minLength}}<br></small>
+                              <small class="text-danger" *ngIf="password.errors.strongPass">{{errors.strongPass}}</small>
+                          </small>
+              </div>
+              <div class="form-group">
+                  <input type="text"
+                          id="firstName"
+                          formControlName="firstName"
+                          class="form-control"
+                          placeholder="Nombre Completo">
+                          <small *ngIf="firstName.invalid && firstName.touched">
+                              <small class="text-danger" *ngIf="firstName.errors.required">{{errors.required}}<br></small>
+                              <small class="text-danger" *ngIf="firstName.errors.noSpecial">{{errors.text}}</small>
+                          </small>
+              </div>
+              <div class="form-group">
+                  <input type="text"
+                          id="lastName"
+                          formControlName="lastName"
+                          class="form-control"
+                          placeholder="Apellidos">
+                          <small *ngIf="lastName.invalid && lastName.touched">
+                              <small class="text-danger" *ngIf="lastName.errors.required">{{errors.required}}<br></small>
+                              <small class="text-danger" *ngIf="lastName.errors.noSpecial">{{errors.text}}</small>
+                          </small>
+              </div>
+              <div class="form-group">
+                  <input type="text"
+                          id="personCI"
+                          formControlName="personCI"
+                          class="form-control"
+                          maxlength="11"
+                          placeholder="C. Identidad">
+                          <small *ngIf="personCI.invalid && personCI.touched">
+                              <small class="text-danger" *ngIf="personCI.errors.required">{{errors.required}}<br></small>
+                              <small class="text-danger" *ngIf="personCI.errors.pattern">{{errors.pattern}}<br></small>
+                              <small class="text-danger" *ngIf="personCI.errors.minlength">{{errors.minLength}}<br></small>
+                          </small>
+              </div>
+              <div class="form-group">
+                  <input type="text"
+                          id="personPhone"
+                          maxlength="10"
+                          formControlName="personPhone"
+                          class="form-control"
+                          placeholder="Número Telefónico">
+                          <small *ngIf="personPhone.invalid && personPhone.touched">
+                              <small class="text-danger" *ngIf="personPhone.errors.required">{{errors.required}}<br></small>
+                              <small class="text-danger" *ngIf="personPhone.errors.pattern">{{errors.pattern}}<br></small>
+                              <small class="text-danger" *ngIf="personPhone.errors.minlength">{{errors.minLength}}<br></small>
+                          </small>
+              </div>
+              <div class="form-group">
+                  <input type="text"
+                          id="personEmail"
+                          formControlName="personEmail"
+                          class="form-control"
+                          placeholder="Correo Electrónico">
+                          <small *ngIf="personEmail.invalid && personEmail.touched">
+                              <small class="text-danger" *ngIf="personEmail.errors.required">{{errors.required}}<br></small>
+                              <small class="text-danger" *ngIf="personEmail.errors.email">{{errors.email}}<br></small>
+                          </small>
+              </div>
+              <div class="form-group">
+                  <textarea type="text"
+                          class="form-control"
+                          id="personDir"
+                          formControlName="personDir"
+                          rows="6"
+                          placeholder="Dirección Particular">
+                  </textarea>
+                  <small *ngIf="personDir.invalid && personDir.touched">
+                      <small class="text-danger" *ngIf="personDir.errors.required">{{errors.required}}<br></small>
+                      <small class="text-danger" *ngIf="personDir.errors.usualPattern">{{errors.text}}</small>
+                  </small>
+              </div>
+              <div class="form-group">
+                  <label for="personProvince" class=" text-muted">Provincia</label>
+                  <select class="form-control"
+                          id="personProvince"
+                          formControlName="personProvince"
+                          (change)="onSelect($event)">
+                          <option *ngFor="let item of provinces"
+                              [value]="item.provinceCode">
+                              {{item.provinceName}} ({{item.provinceAB}})
+                          </option>
+                  </select>
+              </div>
+              <div class="form-group">
+                  <label for="personMunicipalite" class=" text-muted">Municipio</label>
+                  <select class="form-control"
+                          id="personMunicipalite"
+                          formControlName="personMunicipalite">
+                          <option *ngFor="let item of municipalites"
+                              [value]="item.municipaliteCode">
+                              {{item.municipaliteName}}
+                          </option>
+                  </select>
+              </div>
+          </div>
+          </form>
         <div class="card-footer">
             <button class="btn-cancel" (click)="onCancel()">Cancelar</button>
-            <button class="btn-save" type="submit" [disabled]="!editForm.valid">Guardar</button>
+            <button class="btn-save" (click)="onSubmit()"  [disabled]="!editForm.valid">Guardar</button>
         </div>
-        </form>
     </div>
 </div>
