--- a/client/src/app/auth/signin/signin.component.html
+++ b/client/src/app/auth/signin/signin.component.html
@@ -3,7 +3,7 @@
         <div class="form-group">
             <label for="username">Usuario</label>
             <input type="username" id="username" class="form-control" formControlName="username" #autofocus>
-            <small *ngIf="usernames.invalid" >
+            <small *ngIf="usernames.invalid && usernames.touched" >
                 <small class="text-danger" *ngIf="usernames.errors.required">{{errors.required}}</small>
             </small>
         </div>
@@ -14,9 +14,6 @@
                 <small class="text-danger" *ngIf="password.errors.required">{{errors.required}}</small>
             </small>
         </div>
-        <!-- <div class="form-group">
-            <a [routerLink]="['/registrarse']">No está registrado?</a>
-        </div> -->
         <button class="btn btn-primary" [disabled]="inValidForm()" type="submit">Entrar</button>
     </form>
 </div>
