--- a/client/src/app/requests/request-aquaculture-state/request-aquaculture-state.component.html
+++ b/client/src/app/requests/request-aquaculture-state/request-aquaculture-state.component.html
@@ -1,26 +1,27 @@
 <div class="card">
     <div class="card-header">
-        <div class="row"> 
+        <div class="row">
             <div class="col-sm-9">
-                <h5 class="card-title"></h5>
-                <h6 class="card-subtitle mb-2 text-muted">{{currentStep.description}}</h6>
+                <h5 class="card-title text-muted">{{currentStep.description}}</h5>
+                <h6 class="card-subtitle mb-2 text-muted">{{componentTitle}}</h6>
             </div>
             <div class="col-sm-3 text-right">
                 <h5 class="card-title"></h5>
                 <h6 class="card-subtitle mb-2 text-muted">Paso {{currentStep.number}} de {{totalSteps}}</h6>
             </div>
         </div>
-    </div>   
-    <ng-template [ngIf]="setStep('PersonalInfo')"> 
+    </div>
+    <ng-template [ngIf]="setStep('PersonalInfo')">
         <ui-person-form
             [personForm]="addPersonForm">
         </ui-person-form>
         <hr>
         <div class="col-md-12 mb-3">
+            <button class="btn btn-success mr-2" (click)="onDismiss()">{{currentStep.back.title}}</button>
             <button class="btn btn-success" [disabled]="inValidPersonForm()" (click)="goNext()">{{currentStep.next.title}}</button>
         </div>
     </ng-template>
-    <ng-template [ngIf]="setStep('CompanyInfo')"> 
+    <ng-template [ngIf]="setStep('CompanyInfo')">
         <ui-company-form
             [companyForm]="addCompanyForm">
         </ui-company-form>
@@ -30,7 +31,7 @@
             <button class="btn btn-success" [disabled]="inValidCompanyForm()" (click)="goNext()">{{currentStep.next.title}}</button>
         </div>
     </ng-template>
-    <ng-template [ngIf]="setStep('ShipsInfo')"> 
+    <ng-template [ngIf]="setStep('ShipsInfo')">
         <ui-ship-list-form
             [shipsForm]="addShipsListForm">
         </ui-ship-list-form>
@@ -40,7 +41,7 @@
             <button class="btn btn-success" [disabled]="inValidShipForm()" (click)="goNext()">{{currentStep.next.title}}</button>
         </div>
     </ng-template>
-    <ng-template [ngIf]="setStep('ReservoirsInfo')"> 
+    <ng-template [ngIf]="setStep('ReservoirsInfo')">
         <ui-reservoir-form
             [reservoirForm]="addReservoirsListForm">
         </ui-reservoir-form>
@@ -50,15 +51,16 @@
             <button class="btn btn-success" [disabled]="inValidReservoirForm()" (click)="goNext()">{{currentStep.next.title}}</button>
         </div>
     </ng-template>
-    <ng-template [ngIf]="setStep('DocsInfo')"> 
+    <ng-template [ngIf]="setStep('DocsInfo')">
         <ui-docs-form
             [docsForm]="addDocsForm"
-            [irh]="true">
+            [irh]="true"
+            [inValid]="docInValid">
         </ui-docs-form>
         <hr>
         <div class="col-md-12 mb-3">
             <button class="btn btn-success" (click)="goBack()" style="margin-right: 10px">{{currentStep.back.title}}</button>
-            <button class="btn btn-success" [disabled]="inValidDocsForm()" (click)="onSubmit()">{{currentStep.next.title}}</button>
+            <button class="btn btn-success" (click)="onSubmit()">{{currentStep.next.title}}</button>
         </div>
     </ng-template>
 </div>
