--- a/client/src/app/requests/request-platform-private/request-platform-private.component.html
+++ b/client/src/app/requests/request-platform-private/request-platform-private.component.html
@@ -1,9 +1,9 @@
 <div class="card">
     <div class="card-header">
-        <div class="row"> 
+        <div class="row">
             <div class="col-sm-9">
-                <h5 class="card-title"></h5>
-                <h6 class="card-subtitle mb-2 text-muted">{{currentStep.description}}</h6>
+                <h5 class="card-title text-muted">{{currentStep.description}}</h5>
+                <h6 class="card-subtitle mb-2 text-muted">{{componentTitle}}</h6>
             </div>
             <div class="col-sm-3 text-right">
                 <h5 class="card-title"></h5>
@@ -11,16 +11,17 @@
             </div>
         </div>
     </div>
-    <ng-template [ngIf]="setStep('PersonalInfo')"> 
+    <ng-template [ngIf]="setStep('PersonalInfo')">
         <ui-person-form
             [personForm]="addPersonForm">
         </ui-person-form>
         <hr>
         <div class="col-md-12 mb-3">
-            <button class="btn btn-success" [disabled]="inValidPersonForm()" (click)="goNext()">{{currentStep.next.title}}</button>
+            <button class="btn btn-success mr-2" (click)="onDismiss()">{{currentStep.back.title}}</button>
+            <button class="btn btn-success" (click)="goNext()">{{currentStep.next.title}}</button>
         </div>
     </ng-template>
-    <ng-template [ngIf]="setStep('ShipInfo')"> 
+    <ng-template [ngIf]="setStep('ShipInfo')">
         <ui-ship-form
             [shipForm]="addShipForm"
             [fisherys]="fisherys">
@@ -28,20 +29,20 @@
         <hr>
         <div class="col-md-12 mb-3">
             <button class="btn btn-success" (click)="goBack()" style="margin-right: 10px">{{currentStep.back.title}}</button>
-            <button class="btn btn-success" [disabled]="inValidShipForm()" (click)="goNext()">{{currentStep.next.title}}</button>
+            <button class="btn btn-success" (click)="goNext()">{{currentStep.next.title}}</button>
         </div>
     </ng-template>
-    <ng-template [ngIf]="setStep('CaptainInfo')"> 
+    <ng-template [ngIf]="setStep('CaptainInfo')">
         <ui-person-form
             [personForm]="addCaptainForm">
         </ui-person-form>
         <hr>
         <div class="col-md-12 mb-3">
             <button class="btn btn-success" (click)="goBack()" style="margin-right: 10px">{{currentStep.back.title}}</button>
-            <button class="btn btn-success" [disabled]="inValidCaptainForm()" (click)="goNext()">{{currentStep.next.title}}</button>
+            <button class="btn btn-success"  (click)="goNext()">{{currentStep.next.title}}</button>
         </div>
     </ng-template>
-    <ng-template [ngIf]="setStep('DocsInfo')"> 
+    <ng-template [ngIf]="setStep('DocsInfo')">
         <ui-docs-form
             [docsForm]="addDocsForm"
             [contract]="true">
@@ -49,7 +50,7 @@
         <hr>
         <div class="col-md-12 mb-3">
             <button class="btn btn-success" (click)="goBack()" style="margin-right: 10px">{{currentStep.back.title}}</button>
-            <button class="btn btn-success" [disabled]="inValidDocForm()" (click)="onSubmit()">{{currentStep.next.title}}</button>
+            <button class="btn btn-success" (click)="onSubmit()">{{currentStep.next.title}}</button>
         </div>
     </ng-template>
 </div>
